--- a/resume-app/src/app/styles/globals.css
+++ b/resume-app/src/app/styles/globals.css
@@ -7,3 +7,8 @@
 body {
   color: rgb(var(--foreground-rgb));
 }
+
+h1 {
+  font-size: 2.2rem;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
