--- a/resume-app/src/app/components/resume/resume.css
+++ b/resume-app/src/app/components/resume/resume.css
@@ -1,92 +1,12 @@
-.Resume {
-    height: 100%;
-    display: grid;
-    grid-template-columns: 30% 70%;
-    grid-template-rows: 20%;
-    grid-template-areas:
-        "resumeLeftContainer-1 resumeRightContainer-1"
-        "resumeLeftContainer-2 resumeRightContainer-2"
-        "resumeLeftContainer-3 resumeRightContainer-3"
-        "resumeLeftContainer-4 resumeRightContainer-4"
-        "resumeLeftContainer-5 resumeRightContainer-5";
+.mainTitle {
+    font-size: var(--default-main-title-size);
+    color: var(--default-font-color);
 }
 
-.resumeLeftContainer-1 {
-    grid-area: resumeLeftContainer-1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.secondTitle {
+    font-size: var(--default-secondary-title-size);
+    color: rgb(99, 99, 99);
+    margin-top: 2.8rem;
 }
 
-.resumeRightContainer-1 {
-    grid-area: resumeRightContainer-1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.resumeLeftContainer-2 {
-    grid-area: resumeLeftContainer-2;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.resumeRightContainer-2 {
-    grid-area: resumeRightContainer-2;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.resumeLeftContainer-3 {
-    grid-area: resumeLeftContainer-3;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.resumeRightContainer-3 {
-    grid-area: resumeRightContainer-3;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.resumeLeftContainer-4 {
-    grid-area: resumeLeftContainer-4;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.resumeRightContainer-4 {
-    grid-area: resumeRightContainer-4;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.resumeLeftContainer-5 {
-    grid-area: resumeLeftContainer-5;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.resumeRightContainer-5 {
-    grid-area: resumeRightContainer-5;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
+.links {}
