--- a/resume-app/src/app/styles/globals.css
+++ b/resume-app/src/app/styles/globals.css
@@ -1,6 +1,17 @@
 :root {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Inter', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: var(--default-font-size);
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+br {
+  margin-bottom: var(--default-row-spacing);
 }
 
 a:link {
