--- a/resume-app/src/app/components/resume/resume.css
+++ b/resume-app/src/app/components/resume/resume.css
@@ -6,7 +6,7 @@
 .secondTitle {
     font-size: var(--default-secondary-title-size);
     color: var(--default-grey-font-color);
-    margin-top: 2.8rem;
+    margin-top: 3rem;
 }
 
 .contactInfoContainer {
@@ -26,4 +26,10 @@
 .developmentHeader {
     font-weight: bolder;
     font-size: var(--default-third-title-size);
+}
+
+.developmentContentContainer {
+    width: 16rem;
+    color: var(--default-grey-font-color);
+    margin-bottom: var(--default-section-bottom-margin);
 }
