--- a/resume-app/src/app/components/resume/resume-grid.css
+++ b/resume-app/src/app/components/resume/resume-grid.css
@@ -25,7 +25,7 @@
     grid-area: resumeRightContainer-1;
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     gap: var(--resume-grid-gap-size);
 }
@@ -34,8 +34,8 @@
     grid-area: resumeLeftContainer-2;
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: start;
+    justify-content: flex-start;
+    align-items: flex-start;
     gap: var(--resume-grid-gap-size);
 }
 
