--- a/resume-app/src/app/components/resume/resume-grid.css
+++ b/resume-app/src/app/components/resume/resume-grid.css
@@ -16,8 +16,9 @@
     grid-area: resumeLeftContainer-1;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    margin-left: var(--content-margin-from-edge);
     gap: var(--resume-grid-gap-size);
 }
 
@@ -43,8 +44,8 @@
     grid-area: resumeRightContainer-2;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     gap: var(--resume-grid-gap-size);
 }
 
