Added work experience table and cell functionality

--- a/resume-app/src/app/components/resume/resume.css
+++ b/resume-app/src/app/components/resume/resume.css
@@ -1,3 +1,9 @@
+.resumeTitle {
+    display: flex;
+    flex-direction: row;
+    gap: var(--resume-grid-gap-size);
+}
+
 .mainTitle {
     font-size: var(--default-main-title-size);
     color: var(--default-font-color);
